集成水鱼查分器的歌曲数据、xray bot的歌曲别名数据，猜歌功能现可使用水鱼歌曲id作答 或 xray的歌曲别名作答

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,7 @@ group:
 arcaea:
   enable: false
   botarcapi:
+
+maimaiMusicDataApi:
+  divingFish: https://www.diving-fish.com/api/maimaidxprober/music_data
+  xrayAlias: # 自行找xray bot作者获取
