国服maimaiNET歌曲数据抓取脚本

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,13 @@
             <artifactId>kotlin-test-junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- html爬虫 -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
     </dependencies>
 
     <build>
